# AnimeBot

./: .gitignore  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/: bot.py  config.py
src/commands/: anime.py
src/database/: session.py
src/database/models/: user.py
src/models/: anime.py
src/services/: anilist.py
