[project]
name = "animeBot"
version = "0.1.0"
description = "Discord bot for anime release notifications"
requires-python = ">=3.12"

dependencies = [
    "discord.py>=2.6.0",
    "python-dotenv>=1.1.1",
    "aiohttp>=3.12.15",
    "sqlalchemy>=2.0.43",
    "psycopg[binary]>=3.2.9",
    "alembic>=1.16.5",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]